syntax = "proto3";

package yandex.cloud.priv.loadtesting.api.v1.config;

import "google/protobuf/timestamp.proto";

option go_package = "a.yandex-team.ru/contrib/ydb/public/api/client/yc_private/loadtesting/api/v1/config;config";

message Config {
  string id = 1;
  string folder_id = 2;
  string yaml_string = 3;
  string name = 10;
  google.protobuf.Timestamp created_at = 11;
  string created_by = 12;
}
