syntax = "proto3";

package yandex.cloud.priv.loadtesting.api.v1.report.table;

option go_package = "a.yandex-team.ru/contrib/ydb/public/api/client/yc_private/loadtesting/api/v1/report/table;table";

import "yandex/cloud/priv/loadtesting/api/v1/common/quantiles.proto";

message Report {
  map<int64, int64> http_codes = 1;
  map<int64, int64> net_codes = 2;
  common.Quantiles quantiles = 3;
}
